# bootbud

./: Cargo.toml  Dioxus.toml  README.md
smoo/: Cargo.toml
smoo/gadget/src/: main.rs
smoo/host/src/: main.rs
smoo/webusb/: Cargo.toml
smoo/webusb/src/: lib.rs
src/: main.rs
src/fastboot/: mod.rs  protocol.rs  webusb.rs
